--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -13,3 +13,11 @@
     padding-bottom: 10px;
     height: 674px;
 }
+
+.notask{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 580px;
+}
